[package]
name = "blockchain2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137",  features = ["derive"]} #序列化工具
bincode = "1.3.3"   #序列化工具，依赖 serde
rust-crypto = "0.2.36" #hash 函数
chrono = "0.4" # 时间工具
thiserror = "1" # error 工具
tracing = "0.1" # 日志工具
tracing-subscriber = "0.3.11" #日志工具
bigint = "4.4.3"
anyhow = "1.0.57"