[package]
name = "easyspider2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
scraper = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }
serde = {version = "1.0.137",  features = ["derive"]}
serde_json = "1.0.81"