[package]
name = "demo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#structopt = "0.3.26"
anyhow = "1"  #错误处理
clap = { version = "4.0.10", features = ["derive"]} # 命令行解析
colored = "2.0.0" # 终端色彩
mime = "0.3.16" # 处理 mine 类型
reqwest = { version = "0.11.12", features = ["json"]} # http 客户端
tokio = { version = "1.19.2", features = ["full"] } # 异步处理库
syntect = "5.0.0"
