[package]
name = "demo5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "buildcc.rs"
[dependencies]
clap = { version = "4.0.10", features = ["derive"]} # 命令行解析
prost = "0.11.0" # protobuf 处理
thiserror = "1.0.37"
http = "0.2" # 我们使用 HTTP status code 所以引入这个类型库
dashmap = "5.4.0"
[build-dependencies]
prost-build = "0.11.1" # 编译 protobuf
